[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Icons/ItemCategories/Armors.png" type="Texture" id=1]
[ext_resource path="res://Scripts/UI/UIInventoryCategory.gd" type="Script" id=4]

[node name="UIInventoryCategory" type="VBoxContainer"]
modulate = Color( 1, 1, 1, 0.376471 )
margin_right = 70.0
margin_bottom = 74.0
rect_min_size = Vector2( 70, 74 )
script = ExtResource( 4 )

[node name="CenterContainerIcon" type="CenterContainer" parent="."]
margin_right = 70.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 55 )

[node name="ButtonCategoryIcon" type="TextureButton" parent="CenterContainerIcon"]
margin_left = 10.0
margin_top = 2.0
margin_right = 60.0
margin_bottom = 52.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 25 )
texture_normal = ExtResource( 1 )
expand = true

[node name="ColorRectSeparator" type="ColorRect" parent="."]
margin_top = 59.0
margin_right = 70.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 1 )

[connection signal="hide" from="." to="." method="_on_UIInventoryCategory_hide"]
